# mao-na-massa

./: README.md
macaco-louco/: Makefile  pyproject.toml
macaco-louco/macacolouco/: dao_mongo.py  recommendations.py
notebooks/: calculate_wxax.ipynb  generate_datasets.ipynb  publish_wxax.ipynb
