[tool.poetry]
name = "macaco-louco"
packages = [ 
    { include="macacolouco", from="." }
]
version = "0.1.0"
description = ""
authors = ["Cesar Augusto <cesarabruschetta@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
pymongo = "^3.11.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
